# forgeant

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: CMakeLists.txt  bench_agent.cpp  bench_http.cpp  bench_message.cpp  bench_provider.cpp  bench_structured.cpp  bench_tool.cpp  bench_version.cpp
cmake/: agentforgeConfig.cmake.in  forgeantConfig.cmake.in
docs/: Doxyfile  DoxygenLayout.xml  forgeant.css  mainpage.md
docs/guides/: getting-started.md  multi-turn.md  structured-output.md  tools.md
examples/: CMakeLists.txt  basic_chat.cpp  multi_turn.cpp  structured_output.cpp  tool_usage.cpp
include/agentforge/: agentforge.hpp  types.hpp  version.hpp
include/agentforge/agent/: agent.hpp  config.hpp  error.hpp  options.hpp  result.hpp  run_overrides.hpp
include/agentforge/http/: client.hpp  curl_client.hpp  response.hpp
include/agentforge/json/: json.hpp
include/agentforge/provider/: anthropic.hpp  chat_request.hpp  config.hpp  openai.hpp  provider.hpp  response.hpp
include/agentforge/schema/: param_schema.hpp  schema.hpp
include/agentforge/structured/: config.hpp  structured.hpp
include/agentforge/tool/: registry.hpp  tool.hpp  tool_view.hpp
include/agentforge/types/: content.hpp  conversation.hpp  message.hpp  role.hpp
include/forgeant/: forgeant.hpp  types.hpp  version.hpp
include/forgeant/agent/: agent.hpp  error.hpp  options.hpp  result.hpp  run_overrides.hpp
include/forgeant/http/: client.hpp  curl_client.hpp  response.hpp
include/forgeant/json/: json.hpp
include/forgeant/provider/: anthropic.hpp  chat_request.hpp  config.hpp  openai.hpp  provider.hpp  response.hpp
include/forgeant/schema/: param_schema.hpp  schema.hpp
include/forgeant/structured/: config.hpp  structured.hpp
include/forgeant/tool/: registry.hpp  tool.hpp  tool_view.hpp
include/forgeant/types/: content.hpp  conversation.hpp  message.hpp  role.hpp
src/: version.cpp
src/agent/: agent.cpp  error.cpp
src/http/: curl_client.cpp
src/json/: json.cpp
src/provider/: anthropic.cpp  openai.cpp
src/schema/: schema.cpp
src/structured/: structured.cpp
src/tool/: registry.cpp
src/types/: content.cpp  conversation.cpp  message.cpp  role.cpp
tests/: CMakeLists.txt  mock_http_client.hpp  test_agent.cpp  test_agent_factory.cpp  test_anthropic.cpp  test_content.cpp  test_conversation.cpp  test_http.cpp  test_json.cpp  test_message.cpp  test_openai.cpp  test_params_macro.cpp  test_registry.cpp  test_role.cpp  test_schema.cpp  test_structured.cpp  test_tool.cpp  test_version.cpp
